content/post/2020-06_Infinispan_monitoring_in_Kubernetes/code/infinispan/infinispan-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infinispan
