content/post/2020-06_Infinispan_monitoring_in_Kubernetes/code/infinispan/infinispan-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: infinispan-minimal
  namespace: infinispan
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
spec:
  rules:
    - host: infinispan-minimal.minikube.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: infinispan-minimal
              servicePort: 11222
